# voice_ai_bot

./: README.md  README.ru.md  pyproject.toml
src/voice_ai_bot/: handlers.py  main.py
tests/: test_handlers.py
