[project]
name = "voice_ai_bot"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Roman", email = "35300872+monaxovdulov@users.noreply.github.com"},
]
dependencies = [
    "aiogram>=3.11.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
